--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,63 @@ body {
 
 h1 {
     font-family: "Krona One", sans-serif;
+    text-align: left;
 }
 
 p {
   font-size: 15px;
   line-height: 18px;
+  text-align: justify;
+
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
+}
+
+a:link {
+  text-decoration: underline;
+  color: #add8e6;
+}
+
+a:hover {
+  p
+}
+
+a:visited {
+  text-decoration: underline;
+  color: #add8e6;
+}
+
+/* Navigation bar style */
+
+/* Add a black background color to the top navigation */
+.topnav {
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: rgb(242,242,242);
+  text-align: right;
+  padding: 14px 16px;
+  text-decoration: none;
+
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 17px;
+
+  transition: border-bottom .1s;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  border-bottom: 3px solid white;
+  color: white;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  border-bottom: 3px solid white;
+  /* background-color: #ddd; */
+  color: white;
 }
