--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ h1, h2, h3, h4, h5, h6 {
   background-color: rgb(51, 66, 87);
 }
 
-.navbar-brand {
+.navbar-brand h1 {
   color: rgb(238, 238, 238);
   font-size: 1.7rem;
   font-weight: 500;
