--- a/css/styles.css
+++ b/css/styles.css
@@ -153,6 +153,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* @Title Section */
+.personal-icons {
+  margin-top: 2%;
+}
+
 .about-me-text {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
